--- a/paychoicejs.htm
+++ b/paychoicejs.htm
@@ -4,8 +4,9 @@
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 		<title>PayChoice Sample Form</title>
 
-		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-		<script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.10.0/jquery.validate.min.js"></script>
+		<script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.9.1.min.js"></script>
+		<script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jquery.migrate/jquery-migrate-1.1.1.min.js "></script>
+		<script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.0/jquery.validate.min.js"></script>
 
 		<!-- CHANGE TO https://secure.paychoice.com.au/api/v3/paychoice.js FOR PRODUCTION -->
 		<script type="text/javascript" src="https://sandbox.paychoice.com.au/api/v3/paychoice.js"></script>
@@ -51,7 +52,7 @@
 				}
 
 				function displayError(submitButton, errorElement, errorMessage) {
-					// re-enable the submit button & show the error
+					// re-enable the submit button and show the error
 					submitButton.removeAttr("disabled");
 					errorElement.html(errorMessage);
 				}				
